@@ -1,3 +1,8 @@
+Sun May 24 21:54:57 2009  Minero Aoki  <aamine@loveruby.net>
+
+	* net/loveruby/cflat/ast: remove useless methods:
+	  ExprNode#isConstantAddress.
+
 Sun May 24 20:24:01 2009  Minero Aoki  <aamine@loveruby.net>
 
 	* net/loveruby/cflat/compiler/IRGenerator.java (Dereference): do
